--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,45 +2,59 @@
 set-option -g prefix C-a
 unbind-key C-a
 bind-key C-a send-prefix
- 
+
 # Use Alt-arrow keys to switch panes
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
- 
+
 # Shift arrow to switch windows
 bind -n S-Left previous-window
 bind -n S-Right next-window
- 
+
 # Mouse mode
 setw -g mouse on
- 
+
 # Vi mode
 setw -g mode-keys vi
 
 # Set easier window split keys
 bind-key v split-window -h
 bind-key h split-window -v
- 
+
 # Easy config reload
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
 
-#Fix colors
+# Fix colors
 set -g default-terminal "screen-256color"
 set -sg terminal-overrides ",*:RGB"
+
+##### --- TPM bootstrap (auto-install once) --- #####
+set -g @tpm_path "$HOME/.tmux/plugins/tpm"
+if-shell '[ ! -d "$HOME/.tmux/plugins/tpm" ]' \
+  'run-shell "
+    mkdir -p \"$HOME/.tmux/plugins\" &&
+    (
+      command -v git >/dev/null 2>&1 &&
+      git clone --depth 1 https://github.com/tmux-plugins/tpm \"$HOME/.tmux/plugins/tpm\"
+    ) || (
+      command -v curl >/dev/null 2>&1 &&
+      curl -fsSL https://github.com/tmux-plugins/tpm/archive/refs/heads/master.tar.gz | tar -xz -C \"$HOME/.tmux/plugins\" &&
+      mv \"$HOME/.tmux/plugins/tpm-master\" \"$HOME/.tmux/plugins/tpm\"
+    ) || (
+      command -v wget >/dev/null 2>&1 &&
+      wget -qO- https://github.com/tmux-plugins/tpm/archive/refs/heads/master.tar.gz | tar -xz -C \"$HOME/.tmux/plugins\" &&
+      mv \"$HOME/.tmux/plugins/tpm-master\" \"$HOME/.tmux/plugins/tpm\"
+    )
+  "'
+if-shell '[ -x "$HOME/.tmux/plugins/tpm/bin/install_plugins" ]' \
+  'run-shell "$HOME/.tmux/plugins/tpm/bin/install_plugins >/dev/null 2>&1 || true"'
+##### --- end bootstrap --- #####
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'odedlaz/tmux-onedark-theme'
-
-#set -g @plugin 'dracula/tmux'
-#set -g @dracula-show-powerline true
-#set -g @dracula-show-left-icon session
-#set -g @dracula-show-flags true
-#set -g @dracula-plugins "cpu-usage ram-usage"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
