Added autoinstall for tmux tpm

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,6 +55,7 @@ if-shell '[ -x "$HOME/.tmux/plugins/tpm/bin/install_plugins" ]' \
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
