Added autoinstall of tmux tpm

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,8 +26,8 @@ bind-key h split-window -v
 # Easy config reload
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
 
-# Fix colors
-set -g default-terminal "screen-256color"
+#Fix colors
+set -g default-terminal "xterm-256color"
 set -sg terminal-overrides ",*:RGB"
 
 ##### --- TPM bootstrap (auto-install once) --- #####
