Added zsh and ghossty configs
And added some folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@
 # Whitelist specific items
 !README.md
 !setup.sh
-!./nvim/
-!./vim/
-!./tmux/
-!./zsh/
-!./ghostty/
+!nvim/
+!vim/
+!tmux/
+!zsh/
+!ghostty/
