--- a/ghostty/config
+++ b/ghostty/config
@@ -4,7 +4,9 @@ mouse-hide-while-typing = true
 window-decoration = true
 keybind = global:cmd+/=toggle_quick_terminal
 macos-option-as-alt = true
-background-opacity = 0.9
+background-opacity = 0.7
 background-blur-radius = 20
 font-family = "UbuntuMono Nerd Font"
 theme = "One Half Dark"
+window-width = 120
+window-height = 40
