--- a/ghostty/config
+++ b/ghostty/config
@@ -1,12 +1,12 @@
 font-size = 19
+background-opacity = 1
 background-blur-radius = 20
 mouse-hide-while-typing = true
 window-decoration = true
 keybind = global:cmd+/=toggle_quick_terminal
 macos-option-as-alt = true
-background-opacity = 0.7
-background-blur-radius = 20
 font-family = "UbuntuMono Nerd Font"
 theme = "One Half Dark"
+# theme = "Atom One Dark"
 window-width = 120
 window-height = 40
