Changed TMUX colors

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,6 +3,7 @@ set-option -g prefix C-a
 unbind-key C-a
 bind-key C-a send-prefix
 
+# Old Pane and Windows navigation
 # Use Alt-arrow keys to switch panes
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
@@ -56,7 +57,11 @@ if-shell '[ -x "$HOME/.tmux/plugins/tpm/bin/install_plugins" ]' \
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'odedlaz/tmux-onedark-theme'
-set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @plugin 'ross-kostadinov/tmux-tokyonight-theme'
+# set -g @plugin "janoamaral/tokyo-night-tmux"
+# set -g @tokyo-night-tmux_show_datetime 1
+# set -g @tokyo-night-tmux_date_format DMY
+# set -g @tokyo-night-tmux_time_format 24H
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
