Changed theme to OneDark (but with better colors) for Nvim, Tmux and Ghostty

--- a/ghostty/config
+++ b/ghostty/config
@@ -6,8 +6,8 @@ window-decoration = true
 keybind = global:cmd+/=toggle_quick_terminal
 macos-option-as-alt = true
 font-family = "UbuntuMono Nerd Font"
-#theme = "One Half Dark"
-theme = "TokyoNight"
-# theme = "Atom One Dark"
+theme = "One Half Dark"
+#theme = "TokyoNight"
+#theme = "Atom One Dark"
 window-width = 120
 window-height = 40
